styles.css
/* Style sheet for the Library App */

body {    
    display: flex;
    flex-direction: column;
    margin: 0px;
    height: 100vh;
    font-family: Book Antiqua;
    background-color: #def2f1;
}

/* Header and Nav Bar */

header {
    /* height: fit-content; */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 60px;
}

#header-div {
    background-color: #3AAFA9;

}

#left-nav {
    display: flex;
    flex-direction: row;
    border-right: dotted black 0.5px;
    height: 60px;
}

#logo-icon {
    height: 40px;
    margin: 10px 15px;
}

#left-nav p {
    margin: 0;
    padding: 0;
    width: fit-content;
    align-self: center;
    margin-right: 10px;
    /* padding-bottom: 20px; */
    /* margin-top: 20px; */
    /* height: 60px; */
    /* text-align: center;  */
}

#right-nav{
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-right: 15px;
    padding-left: 15px;
    border-left: dotted black 0.5px;
    height: 60px;
}

#welcome-div {
    font-size: 1.5em;
    text-align: center;
}


/* Book DIV and everything inside */

#books-div {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.book {
    display: flex;
    flex-direction: column;
    
    width: 300px;
    height:fit-content;
    margin: 20px;
    margin-bottom: 30px;
    background-color: #3AAFA9;
    border-radius: 0% 10% 10% 10%; 
    box-shadow: 1px 1px 3px rgb(242, 247, 248);     
}

.book p {
    margin: 0;
    padding: 0;
    width: fit-content;
    align-self: center;
    margin-top: 10px;
}

.book-title {
    font-size: 30px;
    text-align: center;
    
}

.book-author {
    font-size: 20px;
    text-align: center;
}

.book-img {
    align-self: center;
    height: 175px;
    margin-top: 10px;
    max-width: 125px;
}

.book-read-div {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-top: 15px;
}

.read-btn {
    margin-left: 10px;
    font-size: 20px;
    background: transparent;
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;
    color: black;
    border-radius: 4px;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    background: rgb(28, 184, 65);
    box-shadow: 1px 1px 2px #17252a;
}

.read-btn:active {
    outline: none;
    border: none;
    box-shadow: none;
}
  
.read-btn:focus {
    outline: 0;
}

div .read-text {
    margin-top: 0;
    font-size: 20px
}

.delete-book-btn {
    width: 100px;
    align-self: center;
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 20px;
    background: transparent;
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;
    color: black;
    border-radius: 4px;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    background: rgb(202, 60, 60);
    box-shadow: 1px 1px 2px #17252a;
}

.delete-book-btn:active {
    outline: none;
    border: none;
    box-shadow: none;
}
  
.delete-book-btn:focus {
    outline: 0;
}


/* ------------------------------ */

#add-book-btn {
    width: 70px;
    height: 70px;
    margin: 40px;
    position: fixed;
    border-radius: 50%;
    bottom: 0;
    right: 0;
    
    
    /* height: 80px; */
    line-height: 70px;  
    /* width: 80px;   */
    font-size: 2em;
    font-weight: bold;
    border-radius: 50%;
    background-color: #2b7a78;
    color: #Feffff;
    text-align: center;
    cursor: pointer;
    outline: none;
    padding: 0;

}

#add-book-btn:active {
    outline: none;
    border: none;
}
  
#add-book-btn:focus {
    outline: 0;
}

.add-book-div {
    position: fixed;
    background-color: beige;
    width: 350px;
    height:350px;
    right:12px;
    bottom: 115px;
    display: flex;
    flex-direction: column;
    box-shadow: 1px 1px 3px lightblue;
    /* align-content: center;    */
}

#add-book-div p {
    width: fit-content;
    align-self: center;
    font-size: 35px;
    margin-bottom: 25px;
    margin-top: 10px;
}

#new-book-form {
    display: flex;
    flex-direction: column;
    align-content: center;
    padding-left: 15px;
    padding-right: 15px;
    font-size: 16px;
}

#new-book-form input {
    margin-bottom: 10px;
    height: 25px;
}

label, input {
    font-size: 16px;
}


input[type=radio] {
    border: 0px;
    width: 20%;
    height: 3em;
    margin-top: 10px;
    vertical-align: middle;
    text-justify: center;
}


.inactive {
    display: none;
}

#footer-p {
    text-align: center;
    /* vertical-align: bottom; */
    margin-bottom: 2px;
    margin-top: 2px;
    width: 100%;
    
} 

#footer-div {
    position: fixed;
    bottom: 0;
    background-color: aquamarine;
    height: fit-content;
    width: 100%;
}

